--- a/src/Components/Boton/Boton.css
+++ b/src/Components/Boton/Boton.css
@@ -2,13 +2,16 @@
 
 .designBoton {
 
-    height: 1.5em;
-    width: 5em;
-    margin: 1em;
-    background-color: white;
-    border-radius: 0.2em;
-    transition: 0.4s;
-    font-size: 25px;
+    height: 2.3em;
+        display: flex;
+        width: 6em;
+        margin: 1em;
+        background-color: white;
+        border-radius: 0.2em;
+        transition: 0.4s;
+        font-size: 20px;
+        flex-direction: column;
+        justify-content: center;
 }
 
 .designBoton:hover{
