--- a/src/Components/Boton/Boton.css
+++ b/src/Components/Boton/Boton.css
@@ -3,19 +3,14 @@
 .designBoton {
 
     height: 2.3em;
-        display: flex;
-        width: 6em;
-        margin: 1em;
-        background-color: white;
-        border-radius: 0.2em;
-        transition: 0.4s;
-        font-size: 20px;
-        flex-direction: column;
-        justify-content: center;
-}
-
-.designBoton:hover{
+    display: flex;
+    width: 4em;
+    margin: 1em;
+    border-radius: 0.2em;
     transition: 0.4s;
-    background-color: rgb(133, 133, 133);
+    font-size: 25px;
+    color: white;
+    flex-direction: column;
+    justify-content: center;
     cursor: pointer;
 }
