changes clic logo,  hhide data profile when we dont have nothing

--- a/src/Containers/Profile/Profile.css
+++ b/src/Containers/Profile/Profile.css
@@ -59,6 +59,7 @@ margin-top: 10em;
     justify-content: center;
     align-items: center;
     font-size: 1.2em;
+    cursor: pointer;
 }
 .deleteButton {
     height: 4em;
@@ -71,4 +72,5 @@ margin-top: 10em;
     justify-content: center;
     align-items: center;
     font-size: 1.2em;
+    cursor: pointer;
 }
