--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,10 +7,10 @@
     flex-direction: row;
     padding: 0px 40px;
 }
-#menu{
+.menu{
     display: flex;
 }
-#logo{
+.logo{
 height: 2.5em;
 cursor: pointer;
 }
