--- a/src/Containers/Films/films.scss
+++ b/src/Containers/Films/films.scss
@@ -21,3 +21,10 @@
 .cartel {
     height: 15em;
 }
+.container-loader {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+}
