--- a/src/Containers/Profile/profile.scss
+++ b/src/Containers/Profile/profile.scss
@@ -13,6 +13,7 @@ div#table-profile {
     height: 3em;
     align-items: center;
     padding: 0px 27px 0px 0px ;
+    background: #d89e9e;
 }
 .table-field-1 {
     width: 6em;
