--- a/src/Containers/Register/register.scss
+++ b/src/Containers/Register/register.scss
@@ -10,7 +10,7 @@
 .sendButton {
     height: 4em;
     width: 100%;
-    background-color: green;
+    background-color: rgb(255, 0, 0);
     color: white;
     border-radius: 0.2em;
     display: flex;
