--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,4 @@
 @import 'Containers/Register/register.scss';
 
 
-html,body,#root {  height: 100%;  margin: 0;}
+html,body,#root {  height: 100%;  margin: 0; background-color: black;}
