--- a/src/Containers/Films/films.scss
+++ b/src/Containers/Films/films.scss
@@ -14,7 +14,7 @@
 
 .peli {
     border-radius : 0.2em;
-    border: 0.1em solid turquoise;
+    border: 0.1em solid rgb(255, 0, 0);
     margin: 0.1em;
 }
 
