--- a/src/Containers/Profile/profile.scss
+++ b/src/Containers/Profile/profile.scss
@@ -49,7 +49,7 @@ margin-top: 10em;
 .table-update{
     width: 20em;
     margin: auto;
-    margin-top: 10em;
+  
 }
 
 .sendButton {
@@ -77,4 +77,23 @@ margin-top: 10em;
     align-items: center;
     font-size: 1.2em;
     cursor: pointer;
+}
+.user-logout{
+width: 100%;
+height: 3em;
+background-color: brown;
+margin-top:3em;
+display: flex;
+justify-content: center;
+align-items: center;
+color: white;
+border-radius: 30px;
+}
+.main-container{
+    display: flex;
+}
+.img-profile {
+    width: 6em;
+    display: block;
+    margin: auto;
 }
