--- a/src/Containers/Film/film.scss
+++ b/src/Containers/Film/film.scss
@@ -4,4 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 30em;    
+    margin: auto;
+   
 }
