changes film and profile css

--- a/src/Containers/Film/film.scss
+++ b/src/Containers/Film/film.scss
@@ -8,3 +8,20 @@
     margin: auto;
    
 }
+.container-rented {
+    /* border-color: green; */
+    height: 1em;
+    padding: 1em;
+    width: 13em;
+    font-size: 1.1em;
+    color: green;
+    text-align: center;
+    font-weight: 700;
+}
+button.button-rent-fiml {
+    padding: 1.1em;
+    font-weight: 800;
+    color: #c90000;
+    border-radius: 30px;
+    border: unset;
+}
