--- a/src/Containers/Admin/Admin.scss
+++ b/src/Containers/Admin/Admin.scss
@@ -94,6 +94,7 @@ font-size:1.2em;
     display: flex;
     flex-direction: column;
     flex-direction: row;
+    justify-content: center;
 }
 .img-profile {
     width: 4em;
@@ -139,4 +140,19 @@ td.td-two {
 }
 img.profile-image-films {
     height: 15em;
+}
+.table-print-pedidos {
+    display: flex;
+}
+.colum-components-home-print-pedidos{
+    width: 13em;
+    background-color: grey;
+    height: 100%;
+    padding: 0em 1em;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+}
+.admin-h1{
+    text-align: center;
 }
