--- a/src/Containers/Profile/profile.scss
+++ b/src/Containers/Profile/profile.scss
@@ -78,11 +78,25 @@ margin-top: 0.5em;
     cursor: pointer;
     border-radius: 30px;
 }
-.user-logout{
+.button-update-open-section{
 width: 100%;
 height: 3em;
 background-color: brown;
-margin-top:3em;
+margin-top:1em;
+display: flex;
+justify-content: center;
+align-items: center;
+color: white;
+border-radius: 30px;
+font-size:1.2em;
+
+
+}
+.user-logout-profile{
+width: 100%;
+height: 3em;
+background-color: brown;
+margin-top:1em;
 display: flex;
 justify-content: center;
 align-items: center;
