--- a/src/Containers/Film/film.scss
+++ b/src/Containers/Film/film.scss
@@ -4,8 +4,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 30em;    
+    max-width: 47em;    
     margin: auto;
+    padding: 4em 0em 11em 0em;
    
 }
 .container-rented {
