--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -77,10 +77,11 @@ input.imput-search {
     color: black;
     text-align: center;
     display: flex;
+    font-size: 1.2em;
 }
 .peli {
-    width: 10em;
-    height: 21em;
+    width: 12em;
+    height: 24em;
     background-color: black;
 }
 p.title-film {
