add changes to film, when we dont have props of user you cant reserve, so you can the the button of login

--- a/src/Containers/Film/film.scss
+++ b/src/Containers/Film/film.scss
@@ -26,3 +26,12 @@ button.button-rent-fiml {
     border-radius: 30px;
     border: unset;
 }
+
+.button-to-login-unlogin {
+    border: 1px solid white;
+    height: 3em;
+    display: flex;
+    border-radius: 49px;
+    align-items: center;
+    justify-content: center;
+}
