--- a/src/Containers/Admin/Admin.scss
+++ b/src/Containers/Admin/Admin.scss
@@ -89,4 +89,6 @@ border-top: 1px solid;
     width: 14em;
     margin: 0;
     background-color: black}
- 
+ .last-order-titles {
+    height: 5em;
+}
