--- a/src/Containers/Register/register.scss
+++ b/src/Containers/Register/register.scss
@@ -2,7 +2,7 @@
 .designRegister{
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 7em);
+    //height: calc(100vh - 7em);
     justify-content: center;
     align-items: center;
 }
@@ -43,4 +43,27 @@ div#style-div-form-register {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 3em;
+}
+.message-info-data {
+    height: fit-content;
+    color: white;
+    
+    width: 16em;
+    margin-bottom: 1em;
+    height: 100%;
+}
+.div-print-info-correct {
+   color: white;
+    padding-bottom: 1em;    
+    margin-top: 1em;
+    height: 1em;
+    font-size: 14px;
+}
+.input-form-register-fields {
+    display: flex;
+    flex-direction: column;
+}
+.container-form-2fields {
+    display: flex;
 }
