add new panel admin, filter

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 @import 'Containers/Login/Login.scss';
 @import 'Containers/Profile/profile.scss';
 @import 'Containers/Register/register.scss';
-
+@import 'Containers/Adminsecond/Adminsecond.scss';
 
 
 html,body,#root {  height: 100%;  margin: 0; background-color: black;}
