--- a/src/Components/Boton/Boton.scss
+++ b/src/Components/Boton/Boton.scss
@@ -4,7 +4,7 @@
 
     height: 2.3em;
     display: flex;
-    width: 4em;
+    width: fit-content;
     margin: 1em;
     border-radius: 0.2em;
     transition: 0.4s;
