add new panel admin, filter

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 @import 'Containers/Profile/profile.scss';
 @import 'Containers/Register/register.scss';
 @import 'Containers/Adminsecond/Adminsecond.scss';
+@import 'Containers/Adminthird/Adminthird.scss';
 
 
 html,body,#root {  height: 100%;  margin: 0; background-color: black;}
