--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -70,7 +70,7 @@ img.image-films {
     width: 100%;
 }
 
-input.imput-search {
+input.imput-search-home {
     height: 3em;
     margin: auto;
     width: 23em;
