--- a/src/Containers/Admin/Admin.scss
+++ b/src/Containers/Admin/Admin.scss
@@ -1,11 +1,12 @@
 
 .main-container-admin {
     display: flex;
-    height: 79vh;
+    height: 100%;
+    min-height: 100vh;;
 }
 .side-bar-admin {
     display: flex;
-    width: 26em;
+    width: 100vw;
     flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
