--- a/src/Containers/Adminsecond/Adminsecond.scss
+++ b/src/Containers/Adminsecond/Adminsecond.scss
@@ -97,7 +97,11 @@ img.profile-image-films {
     display: flex;
     justify-content: center;
 }
-
+.all-users-registers-title {
+    display: flex;
+    justify-content: center;
+    margin-top: 3em;
+}
 
 
 p.colum-components-admin-print-register{
