--- a/src/Containers/Adminthird/Adminthird.scss
+++ b/src/Containers/Adminthird/Adminthird.scss
@@ -47,6 +47,15 @@ img.profile-image-films {
     display: flex;
     align-items: center;
 }
+.colum-components-admin-print-pedidos-vermas{
+    width: 4em;
+    background-color:black;
+    height: 100%;
+    padding: 0em 1em;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+}
 .colum-components-admin-print-pedidos-titles{
     width: 14em;
     background-color: rgb(78, 78, 78);
