--- a/src/Components/Panel_Admin/Panel_Admin.scss
+++ b/src/Components/Panel_Admin/Panel_Admin.scss
@@ -16,7 +16,7 @@
 }
 .panel-admin-screen-right {
     background-color: grey;
-    width: 65%;
+    width: 64em;
     display: flex;
     height: fit-content;
     align-items: center;
@@ -24,16 +24,17 @@
     justify-content: flex-start;
 }
 .panel-admin-side-bar {
-    width: 10em;
+    width: 8em;
     display: flex;
-    font-size: 25px;
-    padding: 3em;
+    font-size: 22px;
+    padding-left: 2em;
+    padding-top: 3em;
     flex-direction: column;
    
 }
 .main-container-admin {
     background-color: maroon;
     padding: 2em;
+    max-width: 1360px;
     display: flex;
-    align-items: center;
 }
