--- a/src/Containers/Admin/Admin.scss
+++ b/src/Containers/Admin/Admin.scss
@@ -2,7 +2,8 @@
 .main-container-admin {
     display: flex;
     height: 100%;
-    min-height: 100vh;;
+    min-height: 100vh;
+    margin: auto;
 }
 .side-bar-admin {
     display: flex;
