--- a/src/Containers/Adminthird/Adminthird.scss
+++ b/src/Containers/Adminthird/Adminthird.scss
@@ -55,6 +55,7 @@ img.profile-image-films {
     border: 1px solid;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 .colum-components-admin-print-pedidos-titles{
     width: 14em;
@@ -110,3 +111,46 @@ border-top: 1px solid;
     border: 1px solid white;
 }
 
+
+
+div#X {
+    top: 0px;
+    position: absolute;
+    right: 20px;
+    color:red;
+}
+.abrepeliculas {
+    width: 30em;
+    height: 25em;
+    background-color: #000000bf;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    display: none;
+}
+.mystyle{
+
+    background-color: #000000;
+    position: fixed;
+    top: 25%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    align-content: inherit;
+    color: white;
+    font-size: 1.7em;
+    cursor: pointer;
+}
+.table-flex-data {
+    display: flex;
+}
+
+.two-tables {
+    display: flex;
+}
