--- a/src/Containers/Adminthird/Adminthird.scss
+++ b/src/Containers/Adminthird/Adminthird.scss
@@ -3,7 +3,7 @@
 }
 .main-container-one {
     display: flex;
-    padding: 3em 0em;
+    padding: 0em 0em;
     flex-direction: column;
     margin: auto;
 }
@@ -40,16 +40,18 @@ img.profile-image-films {
 }
 .colum-components-admin-print-pedidos{
     width: 14em;
-    background-color:black;
+    background-color:white;
     height: 100%;
     padding: 0em 1em;
     border: 1px solid;
+    color: black;
     display: flex;
     align-items: center;
 }
 .colum-components-admin-print-pedidos-vermas{
     width: 4em;
-    background-color:black;
+    background-color:white;
+    color: black;
     height: 100%;
     padding: 0em 1em;
     border: 1px solid;
@@ -96,11 +98,12 @@ border-top: 1px solid;
     border-right: 0.01px solid;
     padding: 15px 15px;
     width: 14em;
+    color: black;
     margin: 0;
-    background-color: black}
+    background-color: white}
  .last-order-titles {
     height: 5em;
-    margin-bottom: 1em;
+    margin-bottom: 0em;
 }
 .button_panel_2 {
     display: flex;
@@ -114,7 +117,7 @@ border-top: 1px solid;
 
 
 div#X {
-    top: 0px;
+    top: 7px;
     position: absolute;
     right: 20px;
     color:red;
@@ -144,7 +147,7 @@ div#X {
     justify-content: center;
     align-content: inherit;
     color: white;
-    font-size: 1.7em;
+    font-size: 1.4em;
     cursor: pointer;
 }
 .table-flex-data {
@@ -153,4 +156,16 @@ div#X {
 
 .two-tables {
     display: flex;
+}
+
+.open-files-back-dark {
+    width: 100vw;
+    height: 100vh;
+    background-color: #000000a2;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
 }
