admin usuarios, panel tp says numer of users and the name more repeat

--- a/src/Containers/Adminthird/Adminthird.scss
+++ b/src/Containers/Adminthird/Adminthird.scss
@@ -49,7 +49,7 @@ img.profile-image-films {
     align-items: center;
 }
 .colum-components-admin-print-pedidos-vermas{
-    width: 4em;
+    width: 1.5em;
     background-color:white;
     color: black;
     height: 100%;
@@ -168,4 +168,11 @@ div#X {
     left: 0;
     display: flex;
     justify-content: center;
+}
+img.icon-search {
+    width: 1.2em;
+}
+.main-container-one {
+    padding: 0em 0em;
+ 
 }
