--- a/src/Containers/Adminsecond/Adminsecond.scss
+++ b/src/Containers/Adminsecond/Adminsecond.scss
@@ -10,8 +10,34 @@ input.imput-search {
     font-size: 1.2em;
     margin-bottom: 3em;
 }
-
-
+.panel_resume {
+    background-color: #c1c0c0;
+    border-radius: 5px;
+    padding: 1em 2em;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5em;
+    justify-content: space-around;
+}
+.panel_resume_data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.panel_resume_title {
+    font-size: 1.2em;
+}
+div.panel_resume_title > p{
+color: black;
+font-weight: 700;
+}
+div.panel_resume_result > p:nth-child(1){
+    color: black;
+    font-size: 1.4em;
+    line-height: 0.2;
+    padding: 0em;
+    margin: 13.4px;
+}
 
 
 
