add function of the admin films, now we can see te film with best score and the film more popular

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
 @import 'Containers/Register/register.scss';
 @import 'Containers/Adminsecond/Adminsecond.scss';
 @import 'Containers/Adminthird/Adminthird.scss';
+@import 'Containers/Adminfour/Adminfour.scss';
 
 
 html,body,#root {  height: 100%;  margin: 0; background-color: black;}
