--- a/src/Containers/Adminsecond/Adminsecond.scss
+++ b/src/Containers/Adminsecond/Adminsecond.scss
@@ -11,7 +11,7 @@ input.imput-search {
     margin-bottom: 3em;
 }
 .panel_resume {
-    background-color: #c1c0c0;
+    background-color: #ffffff;
     border-radius: 5px;
     padding: 1em 2em;
     display: flex;
