--- a/src/Containers/Adminfive/Adminfive.scss
+++ b/src/Containers/Adminfive/Adminfive.scss
@@ -27,7 +27,7 @@
   width: 400px;
   height: 400px;
   border: 2px solid black;
-  line-height: 400px;
+  //line-height: 400px;
   font-size: 40px;
   font-weight: bold;
   color: white;
@@ -49,3 +49,24 @@
 .cube__face--bottom { transform: rotateX(-90deg) translateZ(200px); }
 
 label { margin-right: 10px; }
+
+
+.estadistics-cube-front {
+  display: flex;
+  flex-direction: column;
+}
+.cube__face {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p.estadistics-cube-front-inside-p-film {
+  font-size: 0.4em;
+}
+p.estadistics-cube-front-inside-p-title {
+  font-size: 0.6em;
+}
+img.estadistics-cube-front-inside-p-film-image {
+  width: 4em;
+  height: 6em;
+}
