changes css of the all pages

--- a/src/Containers/Adminthird/Adminthird.scss
+++ b/src/Containers/Adminthird/Adminthird.scss
@@ -137,7 +137,7 @@ div#X {
 }
 .mystyle{
 
-    background-color: #000000;
+    background-color:#cecece;
     position: fixed;
     top: 25%;
     display: flex;
@@ -175,4 +175,9 @@ img.icon-search {
 .main-container-one {
     padding: 0em 0em;
  
+}
+
+
+#myDIV  p{
+color: black;
 }
