--- a/src/Containers/Films/films.scss
+++ b/src/Containers/Films/films.scss
@@ -15,7 +15,7 @@
 
 .peli {
     border-radius : 0.2em;
-    border: 0.1em solid rgb(255, 0, 0);
+    border: 0.1em solid #545454;
     margin: 0.1em;
     cursor: pointer;
 }
