--- a/src/Components/Panel_Admin/Panel_Admin.scss
+++ b/src/Components/Panel_Admin/Panel_Admin.scss
@@ -1,7 +1,6 @@
 
 .panel-admin-screen-right {
     width: 50%;
-    background-color: grey;
     display: flex;
     flex-direction: column;
     padding-left: 5em;
@@ -11,22 +10,23 @@
 .panel-admin {
     display: flex;
     justify-content: space-between;
-    background-color: #320303;
-    padding: 1em;
+    border: 1px solid red;
+    border-radius: 5px;
 }
 .panel-admin-screen-right {
-    background-color: grey;
     width: 64em;
     display: flex;
     height: fit-content;
     align-items: center;
     padding-left: 3em;
+    padding: 2em 0em;
     justify-content: flex-start;
 }
 .panel-admin-side-bar {
-    width: 8em;
+    width: 9.5em;
     display: flex;
     font-size: 22px;
+    border: 1px solid red;
     padding-left: 2em;
     padding-top: 3em;
     flex-direction: column;
@@ -40,5 +40,10 @@
  div.panel-admin-side-bar > div p{
 cursor: pointer;
  }
-
+ 
+ div.panel-admin-side-bar > div p {
+    font-family: monospace;
+    cursor: pointer;
+    font-size: 1.2em;
+}
 
