--- a/src/Containers/Adminfour/Adminfour.scss
+++ b/src/Containers/Adminfour/Adminfour.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 0em 0em;
 }
