--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -13,3 +13,29 @@
 height: 2.5em;
 cursor: pointer;
 }
+
+
+.icono-user-logeado {
+    height: 2.3em;
+    display: flex;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 1em;
+    border-radius: 0.2em;
+    transition: 0.4s;
+    font-size: 20px;
+    color: white;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+}
+.icono-user-logeado {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+ div.icono-user-logeado > img{
+     width: 1.5em;
+     height: 1.5em;
+     margin-right: 0.2em;
+ }
