--- a/src/Containers/Films/films.scss
+++ b/src/Containers/Films/films.scss
@@ -30,3 +30,12 @@
     height: 100vh;
     align-items: center;
 }
+
+.section-films-center {
+    width: 100%;
+    display: flex;
+    max-width: 1400px;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
