--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -17,6 +17,8 @@ cursor: pointer;
 
 .icono-user-logeado {
     height: 2.3em;
+    text-transform: capitalize;
+    color: lime;
     display: flex;
     width: -moz-fit-content;
     width: fit-content;
@@ -24,7 +26,6 @@ cursor: pointer;
     border-radius: 0.2em;
     transition: 0.4s;
     font-size: 20px;
-    color: white;
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
